* The meaning of one of `match_on.glm()`'s arguments has
  changed slightly: to circumvent scale standardization when matching on
  a propensity score or other index, you should now pass
  `standardization.scale=1`, not `standardization.scale=NULL`. (#194)

CHANGES IN OPTMATCH VERSION 0.9-12

* Fixed a bug causing summary.optmatch() to fail b/c of NAs in the treatment
  variable (#155).
* Fixed bug with using custom distance functions (#180) and updated
  documentation related to custom distance functions.
* Fixed minor compatability error in R-devel for math operations on sparse
  distance matrices (#179).


CHANGES IN OPTMATCH VERSION 0.9-11
* Added `exclude` argument to `match_on` mirroring the `exclude` argument for `caliper`.
* `Optmatch` objects now support an `update` function. (#54)
* `Optmatch` objects can be combined via `c`. (#68)
* Added support for `labelled` treatment vectors which often arise when importing
  from Stata or SPSS. (#159)
* Introduced more informative error messages in a few situations. (#149, #104)
* Better handling of NA's in variables involved in matching/calipering/exactMatching. (#147)
* Fixed a bug with incorrect results in `matchfailed`. (#175)

CHANGES IN OPTMATCH VERSION 0.9-10
* Minor release to fix warnings during CRAN checks.

CHANGES IN OPTMATCH VERSION 0.9-9
* Fixed a bug that caused the effective sample size to be rounded too aggresively
  in `summary.optmatch`.
* Improved several error messages and warnings. (#138, #149, #142)
* Fixed use of `if(vectorOfThings)` usage that will give an error in upcoming R release.

CHANGES IN OPTMATCH VERSION 0.9-8
* If pairmatch is asked to match within a stratum with fewer eligible controls
  than `controls` times the number of treatments, it now attempts to match in that
  stratum by leaving out some of the treatment units. (#116)
* The treatment indicator must be either numeric 0/1 (1 for treatment, 0 for control)
  or logical (TRUE for treatment, FALSE for control).