@@ -1,3 +1,5 @@
+* match_on(), scores() and boxplot() now understand survey objects, e.g.
+  propensity score models fitted with case weights via svyglm() (#194)
 * The meaning of one of `match_on.glm()`'s arguments has
   changed slightly: to circumvent scale standardization when matching on
   a propensity score or other index, you should now pass
